# signal-monitor

./: .editorconfig  README.md  server.code-workspace
.github/workflows/: server-devcontainer.yaml  server.yaml
server/: .env  Cargo.toml  Dockerfile  build.rs  check.sh  docker-compose.yml  fix.sh  signal-monitor-server.code-workspace
server/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
server/.devcontainer/scripts/: install-git.sh  install-lld.sh  install-node.sh  install-postgres.sh  install-rust-tools.sh  install-rust.sh
server/app/: .eslintrc.json  .prettierignore  apollo.config.js  codegen.yml  config.ts  next.config.js  package.json  sentry.config.ts  tsconfig.json
server/app/components/: apollo.tsx  chakra.tsx  meta.tsx
server/app/lib/: api.ts  config.ts
server/app/lib/api/: helpers.generated.ts  schema.generated.json
server/app/pages/: _app.tsx  index.tsx
server/app/scripts/: fix.sh  lint.sh
server/migrations/: 20220109212812_shelter_create.down.sql  20220109212812_shelter_create.up.sql
server/scripts/: build.sh  check.sh  dev.sh  fix.sh  install.sh  lint-fix.sh  lint.sh  prelude.sh  run-prod.sh  run.sh
server/src/: api.rs  app.rs  config.rs  handlers.rs  lib.rs  main.rs
server/src/api/: id.rs  mutation.rs  query.rs  test.rs
server/src/handlers/: api.rs  app.rs
