[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"


[dependencies]
anyhow = "^1.0.51"
axum = { version = "^0.4.3", features = ["ws"] }
chrono = { version = "^0.4.19", features = ["serde"] }
derivative = "^2.2.0"
derives = { package = "derive_more", version = "^0.99.17" }
dotenv = "^0.15.0"
futures = { version = "^0.3.19", default-features = false, features = ["std"] }
graphql_axum = { package = "async-graphql-axum", version = "^3.0.17" }
headers = "^0.3.5"
http = "^0.2.5"
hyper = "^0.14.16"
portpicker = "^0.1.1"
sentry_tracing = { package = "sentry-tracing", version = "^0.23.0" }
serde = { version = "^1.0.132", features = ["derive"] }
serde_json = "^1.0.73"
serde_plain = "^1.0.0"
tokio_stream = { package = "tokio-stream", version = "^0.1.8" }
tower = "^0.4.11"
tracing = "^0.1.29"
typed_builder = { package = "typed-builder", version = "^0.9.1" }
url = "^2.2.2"

[dependencies.graphql]
package = "async-graphql"
version = "^3.0.17"
features = ["chrono", "url", "apollo_persisted_queries"]

[dependencies.request]
package = "reqwest"
version = "^0.11.8"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.sea_orm]
package = "sea-orm"
version = "^0.5.0"
features = ["runtime-tokio-rustls", "debug-print", "sqlx-postgres"]

[dependencies.sentry]
version = "^0.23.0"
default-features = false
features = [
  "backtrace",
  "contexts",
  "panic",
  "tracing",
  "reqwest",
  "rustls",
  "anyhow",
]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "migrate", "postgres"]

[dependencies.tokio]
version = "^1.15.0"
features = ["rt-multi-thread", "io-util", "sync", "process"]

[dependencies.tracing_sub]
package = "tracing-subscriber"
version = "^0.2.24"
features = ["env-filter", "json"]

[dependencies.tower_http]
package = "tower-http"
version = "^0.2.0"
features = ["trace"]
